Closed
Bug 227672
Opened 22 years ago
Closed 22 years ago
[FIXr]Repost on back/forward confuses session history
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(3 files)
|
540 bytes,
text/html
|
Details | |
|
1.34 KB,
patch
|
bzbarsky
:
review-
|
Details | Diff | Splinter Review |
|
1.34 KB,
patch
|
adamlock
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
STEPS TO REPRODUCE:
1) Load attached testcase
2) Click the "submit" button
3) Click the "back" button in the navigation toolbar
4) Click the "forward" button in the navigation toolbar. OK the repost dialog.
5) Click the "back" button in the navigation toolbar
Expected results: go back to the testcase page
Actual results: get a postdata alert and are not able to go back
| Assignee | ||
Comment 1•22 years ago
|
||
This seems to be a regression from the patch in bug 144301...
I tried undoing this change in that bug:
@@ -5412,9 +5408,13 @@
// Determine if this type of load should update history.
if (aLoadType == LOAD_BYPASS_HISTORY ||
aLoadType & LOAD_CMD_HISTORY ||
- aLoadType & LOAD_CMD_RELOAD)
+ aLoadType == LOAD_RELOAD_NORMAL)
updateHistory = PR_FALSE;
and that fixed this problem, without regressing that bug as far as I can tell...
I'm not sure why that line was added -- a reload should never create a new
history entry, should it?
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
Note that in the testcase, after the second time I go "forward" there are
_three_ entries in session history instead of just two (without this patch).
| Assignee | ||
Comment 4•22 years ago
|
||
Comment on attachment 136951 [details] [diff] [review]
Proposed patch
Adam, could you possibly review? I wish radha were still reading bugmail, but
maybe you know why she made this weird change?
Attachment #136951 -
Flags: review?(adamlock)
| Assignee | ||
Comment 5•22 years ago
|
||
I accidentally diffed while experimenting with something else...
Attachment #136951 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #136951 -
Attachment is obsolete: false
Attachment #136951 -
Flags: review?(adamlock) → review-
| Assignee | ||
Updated•22 years ago
|
Attachment #136990 -
Flags: review?(adamlock)
Comment on attachment 136990 [details] [diff] [review]
Patch that actually compiles
The original patch went in for bug 160869. I'm supposing that this test is to
stop certain kinds of reloads and history actions from (including involuntary
meta charset reloads) from adding history items.
nsDocShell.h defines quite a few combinations of LOAD_CMD_RELOAD so we'd have
to be careful not to break any of those combos. Assuming nothing breaks, I
don't have any problems so r=adamlock
http://lxr.mozilla.org/seamonkey/source/docshell/base/nsDocShell.h
Attachment #136990 -
Flags: review?(adamlock) → review+
| Assignee | ||
Comment 7•22 years ago
|
||
Comment on attachment 136990 [details] [diff] [review]
Patch that actually compiles
Nothing breaks that I've found yet... And the code was not added for bug 160869
but for bug 144301 like comment 1 says.
darin, could you sr?
Attachment #136990 -
Flags: superreview?(darin)
Comment 8•22 years ago
|
||
Comment on attachment 136990 [details] [diff] [review]
Patch that actually compiles
sr=darin
sorry it took me so long to get to this one!
Attachment #136990 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 9•22 years ago
|
||
Taking.
Assignee: core.history.global → bz-vacation
Summary: Repost on back/forward confuses session history → [FIXr]Repost on back/forward confuses session history
| Assignee | ||
Comment 10•22 years ago
|
||
Checked in for 1.7a.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•22 years ago
|
||
*** Bug 167458 has been marked as a duplicate of this bug. ***
Comment 12•22 years ago
|
||
*** Bug 185441 has been marked as a duplicate of this bug. ***
Component: History: Session → Document Navigation
QA Contact: docshell
You need to log in
before you can comment on or make changes to this bug.
Description
•