History loads should never lead to creation of new session history entries. Bug 227672, r=adamlock, sr=darin